more i/o: readln, write, get-file-buffer, put-file-buffer